<?xml version="1.0" encoding="utf-8"?>
<!--

  This file is part of Ermete SMS.
  
  Ermete SMS is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
  
  Ermete SMS is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
 
  You should have received a copy of the GNU General Public License
  along with Ermete SMS.  If not, see <http://www.gnu.org/licenses/>.

-->
<resources>
  <string name="app_name">Ermete SMS</string>
  <string name="app_version">versione %s</string>
  <string name="app_author_title">Autori</string>
  <string name="app_author_value">Andrea De Pasquale\nAlberto Gasparin</string>
  <string name="app_homepage_title">Homepage</string>
  <string name="app_homepage_value">http://ermetesms.it/</string>
  <string name="sender_prompt">Mittente</string>
  <string name="no_label_text">(etichetta)</string>
  <string name="receiver_hint">Destinatario</string>
  <string name="positive_receiver_toast">Il destinatario %s è stato inserito nella lista</string>
  <string name="negative_receiver_toast">Questo destinatario è già inserito nella lista</string>
  <string name="maximum_receivers_toast">Non è possibile inserire altri destinatari</string>
  <string name="message_hint">Messaggio</string>
  <string name="send_button">Invia</string>
  <string name="invalid_receiver_toast">Uno o più destinatari non validi</string>
  <string name="sending_toast">Invio in corso...</string>
  <string name="sending_progress_notification">Invio del messaggio per %s in corso</string>
  <string name="sending_progress_dialog">Invio in corso...</string>
  <string name="sending_successful_notification">Messaggio per %s inviato</string>
  <string name="sending_successful_toast">Il messaggio è stato inviato</string>
  <string name="sending_canceled_toast">L\'invio è stato cancellato</string>
  <string name="menu_item_accounts">Account</string>
  <string name="menu_item_settings">Impostazioni</string>
  <string name="menu_item_information">Informazioni</string>
  <string name="menu_item_reporting">Feedback</string>
  <string name="account_display_activity">Gestione account</string>
  <string name="account_rename_message">Rinomina l\'etichetta dell\'account:</string>
  <string name="account_delete_message">Sei sicuro di voler eliminare l\'account?</string>
  <string name="no_accounts_text">(nessun account)</string>
  <string name="create_button">Nuovo account</string>
  <string name="account_create_activity">Aggiungi un account</string>
  <string name="welcome_message">Prima di poter inviare un messaggio, è necessario configurare almeno un account.</string>
  <string name="account_text">Account</string>
  <string name="login_text">Nome utente e password:</string>
  <string name="username_hint">Nome utente</string>
  <string name="password_hint">Password</string>
  <string name="login_disclaimer">I dati inseriti saranno memorizzati su questo dispositivo al solo scopo di automatizzare la procedura di invio.</string>
  <string name="login_progress_dialog">Accesso in corso...</string>
  <string name="login_error_toast">Nome utente o password non validi</string>
  <string name="logout_progress_dialog">Uscita in corso...</string>
  <string name="logout_error_toast">Errore durante l\'uscita, ritentare o riavviare l\'applicazione</string>
  <string name="overview_text">L\'account \"%1$s\" è stato %2$s con successo. Potrai selezionarlo dal menu a tendina nella schermata principale dell\'applicazione.</string>
  <string name="unsupported_error_toast">Questo tipo di account non è attualmente supportato. Se desideri collaborare, per favore contatta lo sviluppatore.</string>
  <string name="provider_error_toast">Il sito internet potrebbe essere fuori servizio, per favore controlla e riprova più tardi</string>
  <string name="network_error_toast">Errore durante la connessione</string>
  <string name="partial_error_message">Messaggio per %1$s inviato, messaggio per %2$s non inviato.</string>
  <string name="captcha_partial_message">Messaggio per %s non inviato, decodifica manualmente il CAPTCHA per ritentare.</string>
  <string name="captcha_decode_dialog">Decodifica CAPTCHA</string>
  <string name="captcha_decode_notification">Richiesta decodifica manuale del CAPTCHA</string>
  <string name="network_error_dialog">Errore di rete</string>
  <string name="network_error_message">Si è verificato un problema durante la connessione. Ritentare l\'invio?</string>
  <string name="network_error_notification">Errore durante la connessione</string>
  <string name="provider_error_dialog">Problema del server</string>
  <string name="provider_error_message">Si è verificato un errore nella risposta del server. Il problema potrebbe essere dovuto ad attività di manutenzione. Se l\'errore persiste contatta lo sviluppatore.</string>
  <string name="provider_error_notification">Errore nella risposta del server</string>
  <string name="account_error_dialog">Problemi account</string>
  <string name="account_error_message">Si è verificato un errore nelle impostazioni di questo account. Aprire la schermata di configurazione?</string>
  <string name="account_error_notification">Errore nelle impostazioni dell\'account</string>
  <string name="limit_error_dialog">Messaggi esauriti</string>
  <string name="limit_error_message">I messaggi disponibili per questo account sono esauriti. Ritentare l\'invio con un altro account?</string>
  <string name="limit_error_notification">Messaggi esauriti per l\'account selezionato</string>
  <string name="receiver_error_dialog">Errore destinatario</string>
  <string name="receiver_error_message">Questo account non supporta uno o più destinatari tra quelli selezionati. Ritentare l\'invio con un altro account?</string>
  <string name="receiver_error_notification">Errore nel destinatario del messaggio</string>
  <string name="message_error_dialog">Errore messaggio</string>
  <string name="message_error_message">Questo account non supporta alcuni caratteri contenuti nel testo inserito. Ritentare l\'invio con un altro account?</string>
  <string name="message_error_notification">Errore nel testo del messaggio</string>
  <string name="account_prompt_dialog">Seleziona account:</string>
  <string name="sender_text">Seleziona SIM:</string>
  <string name="sender_disclaimer">Al momento è possibile selezionare soltanto la SIM principale associata all\'account.</string>
  <string name="label_text">Assegna un\'etichetta:</string>
  <string name="existing_label_toast">Etichetta già esistente, selezionare un altro nome</string>
  <string name="settings_activity">Impostazioni di Ermete SMS</string>
  <string name="rename_button">Rinomina</string>
  <string name="cancel_button">Annulla</string>
  <string name="ok_button">OK</string>
  <string name="yes_button">Sì</string>
  <string name="no_button">No</string>
  <string name="prev_button">Indietro</string>
  <string name="next_button">Avanti</string>
  <string name="end_button">Fine</string>
  <string name="close_button">Chiudi</string>
  <string name="retry_now">Riprova subito</string>
  <string name="retry_later">Riprova più tardi</string>
  <string name="and_connector">e</string>
  <string name="or_connector">o</string>
  <string name="other_connector">altri</string>
  <string name="overview_create">creato</string>
  <string name="overview_modify">modificato</string>
  <string name="receiver_settings">Interfaccia</string>
  <string name="filter_receiver_setting">Filtra numeri rubrica</string>
  <string name="show_pictures_setting">Mostra foto contatti</string>
  <string name="background_send_setting">Invia in background</string>
  <string name="sending_settings">Notifiche</string>
  <string name="enable_notifications_setting">Attiva notifiche</string>
  <string name="notification_ringtone_setting">Suoneria notifiche</string>
  <string name="notification_vibration_setting">Vibrazione notifiche</string>
  <string name="conversation_settings">Conversazione</string>
  <string name="save_message_setting">Salva i messaggi</string>
  <string name="clear_message_setting">Pulisci dopo l\'invio</string>
</resources>