<?xml version="1.0" encoding="utf-8"?>
<!--

  This file is part of Ermete SMS.
  
  Ermete SMS is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
  
  Ermete SMS is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
 
  You should have received a copy of the GNU General Public License
  along with Ermete SMS.  If not, see <http://www.gnu.org/licenses/>.
  
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/receiver_settings" >

        <ListPreference
            android:defaultValue=""
            android:entries="@array/receiver_filtering_entries"
            android:entryValues="@array/receiver_filtering_values"
            android:key="filter_receiver"
            android:title="@string/filter_receiver_setting" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="show_pictures"
            android:title="@string/show_pictures_setting" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:enabled="false"
            android:key="background_send"
            android:title="@string/background_send_setting" />
        
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/sending_settings" >

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="enable_notifications"
            android:title="@string/enable_notifications_setting" />

        <RingtonePreference
            android:key="notification_ringtone"
            android:ringtoneType="notification"
            android:title="@string/notification_ringtone_setting" />

        <ListPreference
            android:defaultValue="S"
            android:entries="@array/notification_vibration_entries"
            android:entryValues="@array/notification_vibration_values"
            android:key="notification_vibration"
            android:title="@string/notification_vibration_setting" />
        
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/conversation_settings" >

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="save_message"
            android:title="@string/save_message_setting" />

        <ListPreference
            android:defaultValue="M"
            android:entries="@array/clear_message_entries"
            android:entryValues="@array/clear_message_values"
            android:key="clear_message"
            android:title="@string/clear_message_setting" />
        
    </PreferenceCategory>

</PreferenceScreen>