<?xml version="1.0" encoding="utf-8"?>
<!--

  This file is part of Ermete SMS.
  
  Ermete SMS is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
  
  Ermete SMS is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
 
  You should have received a copy of the GNU General Public License
  along with Ermete SMS.  If not, see <http://www.gnu.org/licenses/>.

-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >
    
		<LinearLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:padding="20dp"
		    android:orientation="vertical" >
		
		    <LinearLayout
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal" >
		        
		        <ImageView
		            android:layout_width="48dp"
		            android:layout_height="48dp" 
		            android:src="@drawable/ic_app" />
		        
		        <LinearLayout
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:orientation="vertical"
		            android:paddingLeft="10dp" >
		            
		            <TextView
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:textSize="24sp"
		                android:textStyle="bold"
		                android:textColor="@android:color/primary_text_dark"
		                android:text="@string/app_name" />
		            
		            <TextView
		                android:id="@+id/app_version"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:textSize="13sp"
		                android:textStyle="normal"
		                android:textColor="@android:color/secondary_text_dark"
		                android:paddingLeft="2sp" />
		            
		        </LinearLayout>
		        
		    </LinearLayout>
		
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="16sp"
		        android:textStyle="bold"
		        android:textColor="@android:color/primary_text_dark"
		        android:paddingTop="10dp"
		        android:text="@string/app_author_title" />
		    
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="14sp"
		        android:textStyle="normal"
		        android:textColor="@android:color/secondary_text_dark"
		        android:text="@string/app_author_value" />
		    
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="16sp"
		        android:textStyle="bold"
		        android:textColor="@android:color/primary_text_dark"
		        android:paddingTop="10dp"
		        android:text="@string/app_homepage_title" />
		    
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="14sp"
		        android:textStyle="normal"
		        android:textColor="@android:color/secondary_text_dark"
		        android:autoLink="web"
		        android:text="@string/app_homepage_value" />
		
		</LinearLayout>
		
</ScrollView>