<?xml version="1.0" encoding="utf-8"?>
<!--

  This file is part of Ermete SMS.
  
  Ermete SMS is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
  
  Ermete SMS is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
 
  You should have received a copy of the GNU General Public License
  along with Ermete SMS.  If not, see <http://www.gnu.org/licenses/>.
  
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/sender_linear"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_gradient"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp" >

        <RelativeLayout
            android:id="@+id/counter_relative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp" >

            <ImageView
                android:id="@+id/counter_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_counter_0" />

            <TextView
                android:id="@+id/counter_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="0"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />
            
        </RelativeLayout>

        <Spinner
            android:id="@+id/sender_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1.0"
            android:prompt="@string/sender_prompt" />

        <View
            android:layout_width="2dp"
            android:layout_height="fill_parent"
            android:background="@drawable/divider_vertical" />

        <ImageButton
            android:id="@+id/clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:background="@drawable/square_button"
            android:src="@drawable/clear_button" />
        
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/receiver_linear"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp" >

                <AutoCompleteTextView
                    android:id="@+id/receiver"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:hint="@string/receiver_hint"
                    android:nextFocusDown="@+id/message"
                    android:singleLine="true" />

                <ImageButton
                    android:id="@+id/plus_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/round_button"
                    android:src="@drawable/ic_btn_plus" />
                
            </LinearLayout>

            <LinearLayout
                android:id="@+id/list_linear"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1.0"
                android:orientation="vertical"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/reply_linear"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1.0"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:visibility="visible" >

                <TextView
                    android:id="@+id/reply_content"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/reply_date"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:singleLine="true"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="12sp" />
                
            </LinearLayout>
            
        </LinearLayout>
        
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/message_linear"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_gradient"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp" >

            <EditText
                android:id="@+id/message"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:autoText="true"
                android:background="@android:drawable/edit_text"
                android:capitalize="sentences"
                android:hint="@string/message_hint"
                android:imeOptions="actionSend|flagNoEnterAction"
                android:inputType="textShortMessage|textAutoCorrect|textCapSentences|textMultiLine"
                android:maxLength="500"
                android:maxLines="3"
                android:nextFocusRight="@+id/send_button" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/send"
                    style="?android:attr/buttonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1.0"
                    android:enabled="false"
                    android:nextFocusLeft="@+id/message"
                    android:text="@string/send_button" />

                <TextView
                    android:id="@+id/length"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal|bottom"
                    android:paddingBottom="5dp"
                    android:paddingLeft="3dp"
                    android:paddingRight="3dp"
                    android:textColor="@android:color/black"
                    android:textSize="11sp"
                    android:visibility="gone" />
                
            </LinearLayout>
            
        </LinearLayout>
        
    </LinearLayout>
    
</LinearLayout>